# langgraph-gmail

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: structured_outputs.py
src/agents/: __init__.py  email_categorizer.py  email_writer.py
src/data/: data.txt
src/graph/: email_graph.py
src/nodes/: __init__.py  emailCategorizer.py  emailListener.py  email_sender.py  email_writer.py
src/prompts/: __init__.py  agents.py  tasks.py
src/states/: state.py
src/utils/: config.py  gmailUtils.py  rag_utils.py
